[package]
name = "mcutilz"
version = "0.3.0"
edition = "2024"
description = "Save and load regions of a local Minecraft world"
authors = ["darcy", "axelahmer"]
license = "GPL-3.0"
documentation = "https://docs.rs/mcutilz/latest/mcutilz"
repository = "https://github.com/axelahmer-teaching/mcutilz"
keywords = ["minecraft", "api", "mcrs"]
exclude = ["target"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
anyhow = "1.0.97"
mcrs = "0.4.2"
# mcrs = { path = "../mcrs" }
# mcrs = { git = "https://github.com/dxrcy/mcrs" }
